# speedreading

./: .env.example  .gitignore  README.md  pyproject.toml
speedreading/: app.py  database.py  models.py  schemas.py
tests/: conftest.py  test_models.py
